# GooeyGUI

./: .gitmodules  CMakeLists.txt  DoxyFile  readme.md
examples/: amp  amp.c  b.sh  builder_example  builder_example.c  colormixer.c  counter.c  dark.json  drop_surface.c  hello_world.c  image_example.c  plots.c  progressbar  progressbar.c  showcase  showcase.c  tabs_example.c  todolist.c
include/: gooey.h
include/assets/: drop_surface_image.h
include/common/: gooey_common.h
include/core/: gooey_window.h
include/signals/: gooey_signals.h
include/theme/: gooey_theme.h
include/widgets/: gooey_button.h  gooey_canvas.h  gooey_checkbox.h  gooey_drop_surface.h  gooey_dropdown.h  gooey_image.h  gooey_label.h  gooey_layout.h  gooey_list.h  gooey_menu.h  gooey_messagebox.h  gooey_plot.h  gooey_progressbar.h  gooey_radiobutton.h  gooey_slider.h  gooey_tabs.h  gooey_textbox.h
internal/backends/: glps_backend_internal.c  gooey_backend_internal.h
internal/backends/utils/: backend_utils_internal.c  backend_utils_internal.h
internal/backends/utils/glad/: glad.c
internal/event/: gooey_event_internal.h
internal/logger/: pico_logger_internal.c  pico_logger_internal.h
internal/widgets/: gooey_button_internal.c  gooey_button_internal.h  gooey_canvas_internal.c  gooey_canvas_internal.h  gooey_checkbox_internal.c  gooey_checkbox_internal.h  gooey_debug_overlay_internal.c  gooey_debug_overlay_internal.h  gooey_drop_surface_internal.c  gooey_drop_surface_internal.h  gooey_dropdown_internal.c  gooey_dropdown_internal.h  gooey_image_internal.c  gooey_image_internal.h  gooey_label_internal.c  gooey_label_internal.h  gooey_list_internal.c  gooey_list_internal.h  gooey_menu_internal.c  gooey_menu_internal.h  gooey_plot_internal.c  gooey_plot_internal.h  gooey_progressbar_internal.c  gooey_progressbar_internal.h  gooey_radiobutton_internal.c  gooey_radiobutton_internal.h  gooey_slider_internal.c  gooey_slider_internal.h  gooey_tabs_internal.c  gooey_tabs_internal.h  gooey_textbox_internal.c  gooey_textbox_internal.h  gooey_window_internal.c  gooey_window_internal.h
src/core/: gooey.c  gooey_window.c
src/signals/: gooey_signals.c
src/theme/: gooey_theme.c
src/widgets/: gooey_button.c  gooey_canvas.c  gooey_checkbox.c  gooey_drop_surface.c  gooey_dropdown.c  gooey_image.c  gooey_label.c  gooey_layout.c  gooey_list.c  gooey_menu.c  gooey_messagebox.c  gooey_plot.c  gooey_progressbar.c  gooey_radiobutton.c  gooey_slider.c  gooey_tabs.c  gooey_textbox.c
website/: gooey_builder.html  index.html
website/docs/: annotated.html  backend__utils_8h.html  backend__utils_8h.js  backend__utils_8h_source.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_0966d06610f72609fd9aa4979c2b5a92.js  dir_38af9c2cfd9be1bff6fdfb850e8f1de8.html  dir_38af9c2cfd9be1bff6fdfb850e8f1de8.js  dir_3cd7fc679ca606ba448aa423150537fc.html  dir_3cd7fc679ca606ba448aa423150537fc.js  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_3d69f64eaf81436fe2b22361382717e5.js  dir_4bc2dda65d93844544aff2d91e34757b.html  dir_4bc2dda65d93844544aff2d91e34757b.js  dir_5e7431b7c1be56deb610977786688ec0.html  dir_5e7431b7c1be56deb610977786688ec0.js  dir_6f3b2b0c21cca25b28b3bb6241d8a0d3.html  dir_6f3b2b0c21cca25b28b3bb6241d8a0d3.js  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_a090692a34bc51b4e667afba608091f7.html  dir_a090692a34bc51b4e667afba608091f7.js  dir_c810468e0e1e38a4ded1cbbb7393cbc2.html  dir_c810468e0e1e38a4ded1cbbb7393cbc2.js  dir_db0e17aff177115174bf81cb3ed9016f.html  dir_db0e17aff177115174bf81cb3ed9016f.js  dir_ef36418f883be2eedf9ca244da52573c.html  dir_ef36418f883be2eedf9ca244da52573c.js  files.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  (+240 more)
website/docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_6.js  all_7.js  all_8.js  all_a.js  all_f.js  classes_1.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  defines_8.js  defines_9.js  enums_0.js  enums_1.js  enums_2.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_7.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+27 more)
